# Matter

./: .gitignore  .pylintrc  README.md  capy.yaml  main.py  pyproject.toml  root.py  tox.ini
.github/workflows/: python-app.yml
classes/: ticket.py
commands/: newTicket.py  ping.py
configuration/: example-settings.json5  settings.json5
helpers/: embed.py  errorHandler.py  error_handler.py  hash.py
instances/: args.py  bot.py  config.py  i18n.py  log.py
instances/tickets/: ticketManager.py
passive/: presence.py
src/matter/: __init__.py  __init__.pyi  main.py
src/matter/configuration/: example-settings.json5
src/matter/configuration/lang/: en_US.json5  ru_RU.json5
src/matter/core/classes/: __init__.py  args.py  args.pyi  bot.py  bot.pyi  config.py  config.pyi  data.py  data.pyi  exceptions.py  exceptions.pyi  i18n.py  i18n.pyi  logger.py  logger.pyi  ticket.py  ticket.pyi
src/matter/core/classes/tickets/: ticket.py  ticket.pyi  ticketManager.py  ticketManager.pyi
src/matter/core/helpers/: embed.py  embed.pyi
src/matter/core/tasks/: presence.py  presence.pyi
src/matter/plugins/: newTicket.py  newTicket.pyi  ping.py  ping.pyi
src/matter/plugins/tickets/: new.py  new.pyi
