[tool.poetry]
name = "matter"
version = "0.1.0"
description = "Matter is a free, open-source and all-in-one ticket bot for Discord"
license = "GPL-3.0-only"
authors = ["kaeeraa <kaeeraa@nebula-nook.ru>"]
maintainers = ["kaeeraa <kaeeraa@nebula-nook.ru>"]
repository = "https://github.com/kaeeraa/Matter"
readme = "README.md"
keywords = ["discord", "bot", "ticket", "bot", "matter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GPL-3.0 License",
    "Programming Language :: Python :: 3.12"
]
packages = [{include = "instances"}]

[tool.poetry.dependencies]
python = ">=3.12.6,<3.14"
hikari = {extras = ["speedups"], version = "^2.1.0"}
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
uvloop = "^0.21.0"
hikari-arc = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kaeeraa/Matter/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

