[tool.poetry]
name = "matter"
version = "0.1.1"
description = "Matter is a free, open-source and all-in-one ticket bot for Discord"
license = "GPL-3.0-Only"
authors = [ "kaeeraa <kaeeraa@nebula-nook.ru>" ]
maintainers = [ "kaeeraa <kaeeraa@nebula-nook.ru>" ]
repository = "https://github.com/kaeeraa/Matter"
readme = "README.md"
keywords = ["discord", "bot", "ticket", "bot", "matter"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "License :: OSI Approved :: GPL-3.0 License",

    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.12.6,<3.14"
hikari = { version = ">=2.0.0,<3.0.0", extras = ["speedups"]}
hikari-arc = ">=1.4.0,<2.0.0"
loguru = ">=0.7.0,<1.0.0"

uvloop = { version = ">=0.17.0,<1.0.0", optional = true }
scipy-stubs = "^1.14.1.3"
arc = {extras = ["stubs"], version = "^1.0"}
pyjson5 = "^1.6.7"
tomli = "^2.2.1"

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
pylint = "^3.3.1"

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.format]
max-line-length = "120"

[tool.poetry.urls]
"Source" = "https://github.com/kaeeraa/Matter"
"Bug Tracker" = "https://github.com/kaeeraa/Matter/issues"

[tool.poetry.scripts]
matter = 'matter.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

